docs/versioned_docs/version-1.8.0/_partial-kb-summary.mdx
A Langflow knowledge base is a local vector database that is stored in Langflow storage.

Because knowledge bases are local, the data isn't remotely requested and re-ingested with every flow run.
This can be more efficient than using a remote vector database, and it is a good choice for flows that use custom, domain-specific datasets, like slices of customer and product data.

You can use knowledge base components in much the same way that you use vector store components.
However, there are several key differences:

* **Local storage**: Langflow knowledge bases are exclusively local.
In contrast, only some vector store components support local databases.
* **Built-in embedding models**: Langflow knowledge bases include built-in support for several embedding models.
Other models aren't supported for use with knowledge bases.
To use a different provider or model, you must use a vector store component along with your preferred embedding model component.
* **Basic similarity search**: When querying Langflow knowledge bases, only standard similarity search is supported.
For more advanced searches, you must use a vector store component for a vector database provider that supports your desired functionality.
* **Structured data**: Langflow knowledge bases only support structured data.
For unstructured data, you must use a compatible vector store component.